mayor change Updated tara library. Updated dependency resolution. Updated icons