@@ -7,11 +7,11 @@ import com.intellij.psi.PsiDocumentManager;
 import com.intellij.psi.PsiElement;
 import com.intellij.psi.PsiFile;
 import com.intellij.util.IncorrectOperationException;
-import io.intino.magritte.lang.model.Node;
-import io.intino.magritte.lang.semantics.Constraint;
-import io.intino.plugin.lang.psi.TaraNode;
 import io.intino.plugin.lang.psi.impl.IntinoUtil;
+import io.intino.plugin.lang.psi.impl.TaraMogramImpl;
 import io.intino.plugin.lang.psi.impl.TaraPsiUtil;
+import io.intino.tara.language.model.Mogram;
+import io.intino.tara.language.semantics.Constraint;
 import org.jetbrains.annotations.Nls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -19,14 +19,13 @@ import org.jetbrains.annotations.Nullable;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 class AddRequiredAspectFix implements IntentionAction {
 
-	private final Node node;
+	private final Mogram mogram;
 
 	public AddRequiredAspectFix(PsiElement element) {
-		this.node = element instanceof Node ? (Node) element : (Node) TaraPsiUtil.getContainerOf(element);
+		this.mogram = element instanceof Mogram ? (Mogram) element : (Mogram) TaraPsiUtil.getContainerOf(element);
 	}
 
 	@Nls
@@ -50,41 +49,41 @@ class AddRequiredAspectFix implements IntentionAction {
 
 	@Override
 	public void invoke(@NotNull Project project, Editor editor, PsiFile file) throws IncorrectOperationException {
-		List<Constraint.Aspect> requires = findConstraints().stream().
-				filter(constraint -> constraint instanceof Constraint.Aspect && ((Constraint.Aspect) constraint).isRequired()).
-				map(constraint -> (Constraint.Aspect) constraint).collect(Collectors.toList());
+		List<Constraint.Facet> requires = findConstraints().stream().
+				filter(constraint -> constraint instanceof Constraint.Facet && ((Constraint.Facet) constraint).isRequired()).
+				map(constraint -> (Constraint.Facet) constraint).toList();
 		filterPresentFacets(requires);
-		for (Constraint.Aspect require : requires) {
-			((TaraNode) node).applyAspect(require.type());
+		for (Constraint.Facet require : requires) {
+			((TaraMogramImpl) mogram).applyFacet(require.type());
 		}
 		PsiDocumentManager.getInstance(file.getProject()).doPostponedOperationsAndUnblockDocument(editor.getDocument());
 	}
 
 	private List<Constraint> findConstraints() {
-		final List<Constraint> constraintsOf = new ArrayList<>(Objects.requireNonNull(IntinoUtil.constraintsOf(node)));
+		final List<Constraint> constraintsOf = new ArrayList<>(Objects.requireNonNull(IntinoUtil.constraintsOf(mogram)));
 		List<Constraint> facetConstraints = new ArrayList<>();
-		final List<String> facets = facetTypes(node);
+		final List<String> facets = facetTypes(mogram);
 		constraintsOf.stream().
-				filter(c -> c instanceof Constraint.Aspect && facets.contains(((Constraint.Aspect) c).type())).
-				forEach(c -> facetConstraints.addAll(((Constraint.Aspect) c).constraints()));
+				filter(c -> c instanceof Constraint.Facet && facets.contains(((Constraint.Facet) c).type())).
+				forEach(c -> facetConstraints.addAll(((Constraint.Facet) c).constraints()));
 		constraintsOf.addAll(facetConstraints);
 		return constraintsOf;
 	}
 
-	private List<String> facetTypes(Node node) {
-		return node.appliedAspects().stream().map(io.intino.magritte.lang.model.Aspect::type).collect(Collectors.toList());
+	private List<String> facetTypes(Mogram node) {
+		return node.appliedFacets().stream().map(io.intino.tara.language.model.Facet::type).toList();
 	}
 
-	private void filterPresentFacets(List<Constraint.Aspect> requires) {
-		for (io.intino.magritte.lang.model.Aspect aspect : node.appliedAspects()) {
-			Constraint.Aspect require = findInConstraints(requires, aspect.type());
+	private void filterPresentFacets(List<Constraint.Facet> requires) {
+		for (io.intino.tara.language.model.Facet aspect : mogram.appliedFacets()) {
+			Constraint.Facet require = findInConstraints(requires, aspect.type());
 			if (require != null) requires.remove(require);
 		}
 	}
 
 	@Nullable
-	private Constraint.Aspect findInConstraints(List<Constraint.Aspect> constraints, String name) {
-		for (Constraint.Aspect require : constraints) if (require.type().equals(name)) return require;
+	private Constraint.Facet findInConstraints(List<Constraint.Facet> constraints, String name) {
+		for (Constraint.Facet require : constraints) if (require.type().equals(name)) return require;
 		return null;
 	}
 
