@@ -7,27 +7,24 @@ import com.intellij.openapi.roots.*;
 import com.intellij.openapi.roots.libraries.Library;
 import com.intellij.openapi.util.Computable;
 import io.intino.Configuration.Artifact.Dependency.Exclude;
-import io.intino.plugin.dependencyresolution.DependencyCatalog.Dependency;
-import io.intino.plugin.lang.psi.impl.IntinoUtil;
-import io.intino.plugin.project.configuration.LegioConfiguration;
-import io.intino.plugin.project.configuration.model.LegioArtifact;
+import org.eclipse.aether.artifact.Artifact;
+import org.eclipse.aether.graph.Dependency;
 import org.jetbrains.annotations.NotNull;
 
 import java.io.File;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static io.intino.plugin.dependencyresolution.IntinoLibrary.INTINO;
-import static java.util.Objects.requireNonNull;
+import static io.intino.plugin.dependencyresolution.IntinoLibrary.artifactOf;
 import static java.util.stream.Collectors.toList;
 
 class ModuleDependencyResolver {
 	DependencyCatalog resolveDependencyWith(Module dependency, String scope) {
-		return resolveDependencyWith(dependency, List.of(), scope);
+		return resolveDependencyWith(dependency, scope, List.of());
 	}
 
-	DependencyCatalog resolveDependencyWith(Module dependency, List<Exclude> excludes, String scope) {
+	DependencyCatalog resolveDependencyWith(Module dependency, String scope, List<Exclude> excludes) {
 		Application application = ApplicationManager.getApplication();
 		if (application.isReadAccessAllowed()) return resolveDependencies(dependency, excludes, scope);
 		else
@@ -37,21 +34,18 @@ class ModuleDependencyResolver {
 	private DependencyCatalog resolveDependencies(Module dependency, List<Exclude> excludes, String scope) {
 		final List<String> excludeQns = excludes.stream().map(e -> e.groupId() + ":" + e.artifactId()).toList();
 		DependencyCatalog catalog = new DependencyCatalog();
-		catalog.add(dependencyFrom((LegioConfiguration) IntinoUtil.configurationOf(dependency), scope));
+		catalog.add(dependency, scope);
 		librariesOf(dependency).stream().filter(l -> l.getName() != null && l.getFiles(OrderRootType.CLASSES).length >= 1).forEach(l -> catalog.add(dependencyFrom(l, scope)));
-		moduleDependenciesOf(dependency).stream().map(IntinoUtil::configurationOf).filter(c -> c instanceof LegioConfiguration).map(c -> (LegioConfiguration) c).forEach(c -> catalog.add(dependencyFrom(c, scope)));
-		return catalog.removeAll(catalog.dependencies().stream().filter(d -> excludeQns.contains(d.groupId() + ":" + d.artifactId())).collect(Collectors.toList()));
+		moduleDependenciesOf(dependency).forEach(m -> catalog.add(m, scope));
+		return catalog.removeAll(catalog.dependencies().stream().filter(d -> excludeQns.contains(d.getArtifact().getGroupId() + ":" + d.getArtifact().getArtifactId())).toList());
 	}
 
-	@NotNull
-	private Dependency dependencyFrom(LegioConfiguration c, String scope) {
-		LegioArtifact artifact = c.artifact();
-		return new Dependency(artifact.groupId() + ":" + artifact.name() + ":" + artifact.version() + ":" + DependencyCatalog.DependencyScope.valueOf(scope.toUpperCase()), c.module().getName());
-	}
 
 	@NotNull
 	private Dependency dependencyFrom(Library library, String scope) {
-		return new Dependency(requireNonNull(library.getName()).replace(INTINO, "") + ":" + scope, new File(library.getFiles(OrderRootType.CLASSES)[0].getPath().replace("!", "")), library.getFiles(OrderRootType.SOURCES).length > 0);
+		Artifact artifact = artifactOf(library, scope);
+		artifact.setFile(new File(library.getFiles(OrderRootType.CLASSES)[0].getPath().replace("!", "")));
+		return new Dependency(artifact, scope);
 	}
 
 	private List<Library> librariesOf(Module module) {
@@ -61,6 +55,9 @@ class ModuleDependencyResolver {
 
 	private List<Module> moduleDependenciesOf(Module moduleDependency) {
 		final ModifiableRootModel model = ModuleRootManager.getInstance(moduleDependency).getModifiableModel();
-		return Arrays.stream(model.getOrderEntries()).filter(o -> o.isValid() && o instanceof ModuleOrderEntry).map(o1 -> ((ModuleOrderEntry) o1).getModule()).collect(toList());
+		return Arrays.stream(model.getOrderEntries())
+				.filter(o -> o.isValid() && o instanceof ModuleOrderEntry)
+				.map(o1 -> ((ModuleOrderEntry) o1).getModule())
+				.toList();
 	}
 }
