@@ -3,52 +3,51 @@ package io.intino.plugin.structureview;
 import com.intellij.ide.structureView.StructureViewTreeElement;
 import com.intellij.ide.util.treeView.smartTree.TreeElement;
 import com.intellij.navigation.ItemPresentation;
-import io.intino.magritte.lang.model.Node;
-import io.intino.plugin.lang.psi.TaraNode;
+import io.intino.plugin.lang.psi.TaraMogram;
 import io.intino.plugin.lang.psi.impl.IntinoUtil;
+import io.intino.tara.language.model.Mogram;
 import org.jetbrains.annotations.NotNull;
 
 import javax.swing.*;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 class StructureViewElement implements StructureViewTreeElement {
 
-	private final TaraNode node;
+	private final TaraMogram mogram;
 
-	StructureViewElement(Node taraNode) {
-		this.node = (TaraNode) taraNode;
+	StructureViewElement(Mogram taraNode) {
+		this.mogram = (TaraMogram) taraNode;
 	}
 
 	@Override
 	public Object getValue() {
-		return node;
+		return mogram;
 	}
 
 	public void navigate(boolean requestFocus) {
-		node.navigate(requestFocus);
+		mogram.navigate(requestFocus);
 	}
 
 	public boolean canNavigate() {
-		return node.canNavigate();
+		return mogram.canNavigate();
 	}
 
 	public boolean canNavigateToSource() {
-		return node.canNavigateToSource();
+		return mogram.canNavigateToSource();
 	}
 
 
 	@NotNull
 	@Override
 	public TreeElement[] getChildren() {
-		if (node != null) {
-			Collection<Node> nodes = IntinoUtil.getComponentsOf(node);
+		if (mogram != null) {
+			Collection<Mogram> nodes = IntinoUtil.getComponentsOf(mogram);
 			if (!nodes.isEmpty()) {
 				List<TreeElement> treeElements = new ArrayList<>(nodes.size());
-				treeElements.addAll(nodes.stream().filter(n -> !n.isReference()).map(StructureViewElement::new).collect(Collectors.toList()));
-				return treeElements.toArray(new TreeElement[treeElements.size()]);
+				treeElements.addAll(nodes.stream().filter(n -> !n.isReference()).map(StructureViewElement::new).toList());
+				return treeElements.toArray(new TreeElement[0]);
 			}
 		}
 		return EMPTY_ARRAY;
@@ -58,7 +57,7 @@ class StructureViewElement implements StructureViewTreeElement {
 	public ItemPresentation getPresentation() {
 		return new ItemPresentation() {
 			public String getPresentableText() {
-				return node.name() == null ? "Anonymous" : node.name();
+				return mogram.name() == null ? "Anonymous" : mogram.name();
 			}
 
 			public String getLocationString() {
@@ -66,7 +65,7 @@ class StructureViewElement implements StructureViewTreeElement {
 			}
 
 			public Icon getIcon(boolean open) {
-				return node.getIcon(0);
+				return mogram.getIcon(0);
 			}
 		};
 	}
