@@ -1,7 +1,7 @@
 package org.jetbrains.jps.intino.model.impl;
 
 import io.intino.konos.compiler.shared.KonosBuildConstants;
-import io.intino.magritte.builder.shared.TaraBuildConstants;
+import io.intino.tara.builder.shared.TaraBuildConstants;
 import org.jetbrains.jps.incremental.CompileContext;
 import org.jetbrains.jps.maven.model.JpsMavenExtensionService;
 import org.jetbrains.jps.maven.model.impl.MavenModuleResourceConfiguration;
@@ -17,13 +17,13 @@ import java.util.Map;
 import java.util.stream.Collectors;
 
 import static io.intino.konos.compiler.shared.KonosBuildConstants.*;
-import static io.intino.magritte.builder.shared.TaraBuildConstants.ARTIFACT_ID;
-import static io.intino.magritte.builder.shared.TaraBuildConstants.GROUP_ID;
-import static io.intino.magritte.builder.shared.TaraBuildConstants.LANGUAGE;
-import static io.intino.magritte.builder.shared.TaraBuildConstants.LANGUAGE_GENERATION_PACKAGE;
-import static io.intino.magritte.builder.shared.TaraBuildConstants.LEVEL;
-import static io.intino.magritte.builder.shared.TaraBuildConstants.VERSION;
-import static io.intino.magritte.builder.shared.TaraBuildConstants.*;
+import static io.intino.tara.builder.shared.TaraBuildConstants.ARTIFACT_ID;
+import static io.intino.tara.builder.shared.TaraBuildConstants.GROUP_ID;
+import static io.intino.tara.builder.shared.TaraBuildConstants.LANGUAGE;
+import static io.intino.tara.builder.shared.TaraBuildConstants.LANGUAGE_GENERATION_PACKAGE;
+import static io.intino.tara.builder.shared.TaraBuildConstants.LEVEL;
+import static io.intino.tara.builder.shared.TaraBuildConstants.VERSION;
+import static io.intino.tara.builder.shared.TaraBuildConstants.*;
 
 class JpsConfigurationLoader {
 	private static final String TARA = "tara.";
@@ -65,7 +65,7 @@ class JpsConfigurationLoader {
 			conf.outDsl = parameters.getOrDefault(OUT_DSL, "");
 			String excludedPhases = parameters.getOrDefault(EXCLUDED_PHASES, "");
 			if (excludedPhases != null && !excludedPhases.isEmpty())
-				conf.excludedPhases = Arrays.stream(excludedPhases.split(" ")).map(Integer::parseInt).collect(Collectors.toList());
+				conf.excludedPhases = Arrays.stream(excludedPhases.split(" ")).map(Integer::parseInt).toList();
 			conf.modelGenerationPackage = parameters.get(TaraBuildConstants.GENERATION_PACKAGE);
 			conf.boxGenerationPackage = parameters.get(KonosBuildConstants.BOX_GENERATION_PACKAGE);
 			conf.languageGenerationPackage = parameters.getOrDefault(LANGUAGE_GENERATION_PACKAGE, "");
@@ -90,7 +90,7 @@ class JpsConfigurationLoader {
 		conf.outDsl = props.getOrDefault(TARA + OUT_DSL, "");
 		String phases = props.getOrDefault(TARA + EXCLUDED_PHASES, "");
 		if (phases != null && !phases.isEmpty())
-			conf.excludedPhases = Arrays.stream(phases.split(",")).map(Integer::parseInt).collect(Collectors.toList());
+			conf.excludedPhases = Arrays.stream(phases.split(",")).map(Integer::parseInt).toList();
 		conf.modelGenerationPackage = props.getOrDefault(TARA + GENERATION_PACKAGE, props.getOrDefault(TARA + OUT_DSL, ""));
 	}
 }
